# agent-cli

./: .gitignore  Cargo.toml  README.md  registries.yaml  skills-registry.yaml
docs/: SCOPE.md
skills/: react.md  rust.md  shadcn.md  typescript.md
skills/react/: README.md
skills/rust/: README.md
skills/shadcn/: README.md
skills/typescript/: README.md
src/: config.rs  formatters.rs  health.rs  init.rs  main.rs  registry.rs  skills.rs  store.rs  sync.rs
templates/: dart.yaml  frontend.yaml  rust.yaml  shadcn-ui.yaml
