[package]
name = "agent-cli"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Agent-agnostic MCP sync and skills bootstrap CLI"

[dependencies]
anyhow = "1.0"
clap = { version = "4", features = ["derive", "env"] }
dirs = "5"
hex = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yml = "0.0.12"
sha2 = "0.10"
shellexpand = "3.1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
toml = "0.8"

